updated gotham footer

--- a/elements/gotham-footer/demo/index.html
+++ b/elements/gotham-footer/demo/index.html
@@ -20,7 +20,7 @@
       <demo-snippet>
         <template>
           <gotham-footer>
-            This is gotham-footer
+            Thank you for visiting our site.
           </gotham-footer>
         </template>
       </demo-snippet>
