--- a/elements/gotham-footer/src/gotham-footer.html
+++ b/elements/gotham-footer/src/gotham-footer.html
@@ -1,1 +1,9 @@
-<slot></slot>
+<div class="container">
+  <div class="logo">
+    <gotham-logo></gotham-logo>
+  </div>
+  <div class="slot">
+    <slot></slot>
+  </div>
+</div>
+
