updated gotham footer

--- a/test/index.html
+++ b/test/index.html
@@ -9,6 +9,8 @@
   <body>
     <script>
       WCT.loadSuites([
+        "../node_modules/@gotham/gotham-footer/test/index.html",
+        "../node_modules/@gotham/gotham-logo/test/index.html"
       ]);
     </script>
   </body>
